Add "E57Simple" API  (#41)
Adds E57Simple API from the original reference library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources( E57Format
         ${CMAKE_CURRENT_LIST_DIR}/CheckedFile.h
         ${CMAKE_CURRENT_LIST_DIR}/CheckedFile.cpp
         ${CMAKE_CURRENT_LIST_DIR}/Common.h
+        ${CMAKE_CURRENT_LIST_DIR}/Common.cpp
         ${CMAKE_CURRENT_LIST_DIR}/Decoder.h
         ${CMAKE_CURRENT_LIST_DIR}/Decoder.cpp
         ${CMAKE_CURRENT_LIST_DIR}/Encoder.h
@@ -16,18 +17,24 @@ target_sources( E57Format
         ${CMAKE_CURRENT_LIST_DIR}/Packet.cpp
         ${CMAKE_CURRENT_LIST_DIR}/ImageFileImpl.cpp
         ${CMAKE_CURRENT_LIST_DIR}/ImageFileImpl.h
+        ${CMAKE_CURRENT_LIST_DIR}/ReaderImpl.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/ReaderImpl.h
         ${CMAKE_CURRENT_LIST_DIR}/SourceDestBufferImpl.h
         ${CMAKE_CURRENT_LIST_DIR}/SourceDestBufferImpl.cpp
         ${CMAKE_CURRENT_LIST_DIR}/StructureNodeImpl.h
         ${CMAKE_CURRENT_LIST_DIR}/StructureNodeImpl.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/WriterImpl.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/WriterImpl.h
         ${CMAKE_CURRENT_LIST_DIR}/E57Exception.cpp
         ${CMAKE_CURRENT_LIST_DIR}/E57Format.cpp
         ${CMAKE_CURRENT_LIST_DIR}/E57FormatImpl.cpp
         ${CMAKE_CURRENT_LIST_DIR}/E57FormatImpl.h
+        ${CMAKE_CURRENT_LIST_DIR}/E57SimpleData.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/E57SimpleReader.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/E57SimpleWriter.cpp
         ${CMAKE_CURRENT_LIST_DIR}/E57Version.h
-        ${CMAKE_CURRENT_LIST_DIR}/E57XmlParser.h
         ${CMAKE_CURRENT_LIST_DIR}/E57XmlParser.cpp
-
+        ${CMAKE_CURRENT_LIST_DIR}/E57XmlParser.h
 )
 
 target_include_directories( E57Format
