--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -3,14 +3,18 @@
 
 target_sources( ${PROJECT_NAME}
 	PRIVATE
-		${CMAKE_CURRENT_LIST_DIR}/E57Format.h
 		${CMAKE_CURRENT_LIST_DIR}/E57Exception.h
+		${CMAKE_CURRENT_LIST_DIR}/E57Format.h
+		${CMAKE_CURRENT_LIST_DIR}/E57SimpleData.h
+		${CMAKE_CURRENT_LIST_DIR}/E57SimpleReader.h
+		${CMAKE_CURRENT_LIST_DIR}/E57SimpleWriter.h
 )
 
 install(
 	FILES
 		E57Format.h
 		E57Exception.h
+		E57Simple.h
 	DESTINATION
 		include/E57Format
 )
