--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,8 @@
 
 target_sources( E57Format
     PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}/BlobNodeImpl.h
+        ${CMAKE_CURRENT_LIST_DIR}/BlobNodeImpl.cpp
         ${CMAKE_CURRENT_LIST_DIR}/CheckedFile.h
         ${CMAKE_CURRENT_LIST_DIR}/CheckedFile.cpp
         ${CMAKE_CURRENT_LIST_DIR}/Common.h
@@ -19,6 +21,10 @@ target_sources( E57Format
         ${CMAKE_CURRENT_LIST_DIR}/Decoder.cpp
         ${CMAKE_CURRENT_LIST_DIR}/Encoder.h
         ${CMAKE_CURRENT_LIST_DIR}/Encoder.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/FloatNodeImpl.h
+        ${CMAKE_CURRENT_LIST_DIR}/FloatNodeImpl.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/IntegerNodeImpl.h
+        ${CMAKE_CURRENT_LIST_DIR}/IntegerNodeImpl.cpp
         ${CMAKE_CURRENT_LIST_DIR}/NodeImpl.h
         ${CMAKE_CURRENT_LIST_DIR}/NodeImpl.cpp
         ${CMAKE_CURRENT_LIST_DIR}/Packet.h
@@ -27,10 +33,14 @@ target_sources( E57Format
         ${CMAKE_CURRENT_LIST_DIR}/ImageFileImpl.h
         ${CMAKE_CURRENT_LIST_DIR}/ReaderImpl.cpp
         ${CMAKE_CURRENT_LIST_DIR}/ReaderImpl.h
+        ${CMAKE_CURRENT_LIST_DIR}/ScaledIntegerNodeImpl.h
+        ${CMAKE_CURRENT_LIST_DIR}/ScaledIntegerNodeImpl.cpp
         ${CMAKE_CURRENT_LIST_DIR}/SectionHeaders.h
         ${CMAKE_CURRENT_LIST_DIR}/SectionHeaders.cpp
         ${CMAKE_CURRENT_LIST_DIR}/SourceDestBufferImpl.h
         ${CMAKE_CURRENT_LIST_DIR}/SourceDestBufferImpl.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/StringNodeImpl.h
+        ${CMAKE_CURRENT_LIST_DIR}/StringNodeImpl.cpp
         ${CMAKE_CURRENT_LIST_DIR}/StructureNodeImpl.h
         ${CMAKE_CURRENT_LIST_DIR}/StructureNodeImpl.cpp
         ${CMAKE_CURRENT_LIST_DIR}/VectorNodeImpl.h
@@ -39,8 +49,6 @@ target_sources( E57Format
         ${CMAKE_CURRENT_LIST_DIR}/WriterImpl.h
         ${CMAKE_CURRENT_LIST_DIR}/E57Exception.cpp
         ${CMAKE_CURRENT_LIST_DIR}/E57Format.cpp
-        ${CMAKE_CURRENT_LIST_DIR}/E57FormatImpl.cpp
-        ${CMAKE_CURRENT_LIST_DIR}/E57FormatImpl.h
         ${CMAKE_CURRENT_LIST_DIR}/E57SimpleData.cpp
         ${CMAKE_CURRENT_LIST_DIR}/E57SimpleReader.cpp
         ${CMAKE_CURRENT_LIST_DIR}/E57SimpleWriter.cpp
