Fix cmake config filename.
CMake looks for the lower-case package filename. Linux is case-sensitive, so it couldn't find it before.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,7 +148,7 @@ install(
 
 install(
     FILES
-        ${CMAKE_CURRENT_SOURCE_DIR}/cmake/E57Format-config.cmake
+        ${CMAKE_CURRENT_SOURCE_DIR}/cmake/e57format-config.cmake
     DESTINATION
         lib/cmake/E57Format
 )
