cmake option should not have comma

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,18 +82,18 @@ endif()
 # The extra code does not change the file contents.
 # Recommend that E57_DEBUG remain defined even for production versions.
 
-option( E57_DEBUG,     "Compile library with minimal debug checking" ON )
-option( E57_MAX_DEBUG, "Compile library with maximum debug checking" OFF )
+option( E57_DEBUG      "Compile library with minimal debug checking" ON )
+option( E57_MAX_DEBUG  "Compile library with maximum debug checking" OFF )
 
 # Various levels of printing to the console of what is going on in the code.
 # Optional
 
-option( E57_VERBOSE,     "Compile library with verbose logging" OFF )
-option( E57_MAX_VERBOSE, "Compile library with maximum verbose logging" OFF )
+option( E57_VERBOSE      "Compile library with verbose logging" OFF )
+option( E57_MAX_VERBOSE  "Compile library with maximum verbose logging" OFF )
 
 # Enable writing packets that are correct but will stress the reader.
 
-option( E57_WRITE_CRAZY_PACKET_MODE, "Compile library to enable reader-stressing packets" OFF )
+option( E57_WRITE_CRAZY_PACKET_MODE "Compile library to enable reader-stressing packets" OFF )
 
 #########################################################################################
 
