cmake: E57_VISIBILITY_HIDDEN option for hidden symbol visibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,10 +95,16 @@ option( E57_MAX_VERBOSE  "Compile library with maximum verbose logging" OFF )
 
 option( E57_WRITE_CRAZY_PACKET_MODE "Compile library to enable reader-stressing packets" OFF )
 
+option( E57_VISIBILITY_HIDDEN       "Compile library with hidden symbol visibility" OFF)
+
 #########################################################################################
 
 set( revision_id "${PROJECT_NAME}-${PROJECT_VERSION}-${${PROJECT_NAME}_BUILD_TAG}" )
 message( STATUS "[E57] Revision ID: ${revision_id}" )
+
+if ( E57_VISIBILITY_HIDDEN )
+    set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+endif()
 
 # Target
 if ( E57_BUILD_SHARED )
