--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -6,15 +6,10 @@ jobs:
   formatting-check:
     name: Formatting Check
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        path:
-          - 'include'
-          - 'src'
     steps:
       - uses: actions/checkout@v3
       - name: Run clang-format style check
         uses: jidicula/clang-format-action@v4.9.0
         with:
           clang-format-version: '13'
-          check-path: ${{ matrix.path }}
+          exclude-regex: 'extern'
