Extract CheckedFile's float-to-str function to StringFunctions so we can test it

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -35,6 +35,11 @@ if ( CCACHE_PROGRAM )
     )
 endif()
 
+target_include_directories( testE57
+    PRIVATE
+        ../src
+)
+
 target_link_libraries( testE57
     PRIVATE
         E57Format
