--- a/test/src/CMakeLists.txt
+++ b/test/src/CMakeLists.txt
@@ -4,6 +4,7 @@
 target_sources( ${PROJECT_NAME}
     PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/RandomNum.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/TestData.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleData.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleReader.cpp
