--- a/test/src/CMakeLists.txt
+++ b/test/src/CMakeLists.txt
@@ -3,11 +3,11 @@
 
 target_sources( ${PROJECT_NAME}
     PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/RandomNum.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/TestData.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleData.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleReader.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/test_SimpleWriter.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/test_StringFunctions.cpp
+        main.cpp
+        RandomNum.cpp
+        TestData.cpp
+        test_SimpleData.cpp
+        test_SimpleReader.cpp
+        test_SimpleWriter.cpp
+        test_StringFunctions.cpp
 )
