{cmake} Install new version header
Also clean up the extra paths in subdirectories - we don't need them anymore.

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -3,11 +3,11 @@
 
 target_sources( ${PROJECT_NAME}
 	PRIVATE
-		${CMAKE_CURRENT_LIST_DIR}/E57Exception.h
-		${CMAKE_CURRENT_LIST_DIR}/E57Format.h
-		${CMAKE_CURRENT_LIST_DIR}/E57SimpleData.h
-		${CMAKE_CURRENT_LIST_DIR}/E57SimpleReader.h
-		${CMAKE_CURRENT_LIST_DIR}/E57SimpleWriter.h
+		E57Exception.h
+		E57Format.h
+		E57SimpleData.h
+		E57SimpleReader.h
+		E57SimpleWriter.h
 		E57Version.h
 )
 
@@ -18,6 +18,7 @@ install(
 		E57SimpleData.h
 		E57SimpleReader.h
 		E57SimpleWriter.h
+		E57Version.h
 	DESTINATION
 		include/E57Format
 )
@@ -27,4 +28,3 @@ target_include_directories( ${PROJECT_NAME}
 		$<INSTALL_INTERFACE:include/E57Format>
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
-
