{cmake} Split diagnostic output (dump() functions) from E57_DEBUG to E57_ENABLE_DIAGNOSTIC_OUTPUT
In an effort to clean up all these compile options, isolate the diagnostic output.

Instead of always including this code, it is an option (E57_ENABLE_DIAGNOSTIC_OUTPUT) for backwards compatibility. The only real reason to turn this off would be for slightly smaller binaries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,11 @@ endif()
 option( E57_DEBUG      "Compile library with minimal debug checking" ON )
 option( E57_MAX_DEBUG  "Compile library with maximum debug checking" OFF )
 
+# Enable/disable code which dumps detailed node info to std::ostream. (See NodeImpl::dump())
+# Instead of always including this code, it is an option for backwards compatibility.
+# The only real reason to turn this off would be for slightly smaller binaries.
+option( E57_ENABLE_DIAGNOSTIC_OUTPUT  "Include code for diagnostic output using dump() on nodes" ON )
+
 # Various levels of printing to the console of what is going on in the code.
 # Optional
 option( E57_VERBOSE      "Compile library with verbose logging" OFF )
@@ -148,27 +153,13 @@ endif()
 target_compile_definitions( E57Format
     PRIVATE
         REVISION_ID="${REVISION_ID}"
+        $<$<BOOL:${E57_DEBUG}>:E57_DEBUG>
+        $<$<BOOL:${E57_MAX_DEBUG}>:E57_MAX_DEBUG>
+        $<$<BOOL:${E57_ENABLE_DIAGNOSTIC_OUTPUT}>:E57_ENABLE_DIAGNOSTIC_OUTPUT>
+        $<$<BOOL:${E57_VERBOSE}>:E57_VERBOSE>
+        $<$<BOOL:${E57_MAX_VERBOSE}>:E57_MAX_VERBOSE>
+        $<$<BOOL:${E57_WRITE_CRAZY_PACKET_MODE}>:E57_WRITE_CRAZY_PACKET_MODE>
 )
-
-if ( E57_DEBUG )
-    target_compile_definitions( E57Format PRIVATE E57_DEBUG )
-endif()
-
-if ( E57_MAX_DEBUG )
-    target_compile_definitions( E57Format PRIVATE E57_MAX_DEBUG )
-endif()
-
-if ( E57_VERBOSE )
-    target_compile_definitions( E57Format PRIVATE E57_VERBOSE )
-endif()
-
-if ( E57_MAX_VERBOSE )
-    target_compile_definitions( E57Format PRIVATE E57_MAX_VERBOSE )
-endif()
-
-if ( E57_WRITE_CRAZY_PACKET_MODE )
-    target_compile_definitions( E57Format PRIVATE E57_WRITE_CRAZY_PACKET_MODE )
-endif()
 
 if ( E57_VISIBILITY_HIDDEN )
 	set_target_properties( E57Format
