Don't turn on sanitizers for lib automatically when building tests
We may want to build a release version with tests but without the sanitizers for example.

Add a new option E57FORMAT_SANITIZE_ALL to turn them both on at once.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,6 +137,7 @@ jobs:
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
           -DE57_BUILD_SHARED=${{ matrix.build_shared }}
           -DE57_VALIDATION_LEVEL=${{ matrix.validation_level }}
+          -DE57FORMAT_SANITIZE_ALL:BOOL=ON
           .
 
       - name: Build
