{cmake} Turn off LTO for debug builds
LTO can make debugging more difficult.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,7 @@ set_target_properties( E57Format
 		EXPORT_COMPILE_COMMANDS ON
 		POSITION_INDEPENDENT_CODE ON
 		INTERPROCEDURAL_OPTIMIZATION ON
+		INTERPROCEDURAL_OPTIMIZATION_DEBUG OFF
 )
 
 if( NOT DEFINED CMAKE_DEBUG_POSTFIX )
