{ci} Update all actions
Also always use the latest conda  xerces-c

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,12 +92,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: recursive
 
       - name: Checkout Test Data
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: 'asmaloney/libE57Format-test-data'
           path: libE57Format-test-data
@@ -116,7 +116,7 @@ jobs:
 
       - name: Install Dependencies (Windows)
         if: matrix.platform == 'windows'
-        uses: conda-incubator/setup-miniconda@v2
+        uses: conda-incubator/setup-miniconda@v3
         with:
           channels: conda-forge
 
@@ -124,13 +124,13 @@ jobs:
         if: matrix.platform == 'windows'
         shell: bash -el {0}
         run: |
-          conda install xerces-c=3.2.4
+          conda install conda-forge::xerces-c
           choco upgrade ccache ninja
           ccache --version | head -n 1
           echo "ninja $(ninja --version)"
 
       - name: ccache
-        uses: hendrikmuhs/ccache-action@v1.2
+        uses: hendrikmuhs/ccache-action@v1
         with:
           max-size: '5G'
           key: ${{ matrix.os }}-${{ matrix.build_type }}
